force-app/main/default/objects/CustomMarkupConfiguration__c/CustomMarkupConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Setting for Custom Markup</description>
    <label>Custom Markup Configuration</label>
</CustomObject>