force-app/main/default/objects/CustomMarkupConfiguration__c/fields/Add_On_Cost_Markup__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Cost_Markup__c</fullName>
    <label>Add-On Cost Markup</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>