force-app/main/default/objects/CustomMarkupConfiguration__c/fields/Board_Book_Printing_Cost_Markup__c.field-meta.xml
<CustomField>
    <fullName>Board_Book_Printing_Cost_Markup__c</fullName>
    <label>Board Book Printing Cost Markup</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>