force-app/main/default/objects/CustomMarkupConfiguration__c/fields/Case_Binding_Printing_Cost_Markup__c.field-meta.xml
<CustomField>
    <fullName>Case_Binding_Printing_Cost_Markup__c</fullName>
    <label>Case Binding Printing Cost Markup</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>