force-app/main/default/objects/CustomMarkupConfiguration__c/fields/Cost_Low__c.field-meta.xml
<CustomField>
    <fullName>Cost_Low__c</fullName>
    <label>Cost Low</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>