force-app/main/default/objects/CustomMarkupConfiguration__c/fields/Cost_Max__c.field-meta.xml
<CustomField>
    <fullName>Cost_Max__c</fullName>
    <label>Cost Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>