force-app/main/default/objects/CustomMarkupConfiguration__c/fields/Saddle_Perfect_Binding_Printing_Cost_Mar__c.field-meta.xml
<CustomField>
    <fullName>Saddle_Perfect_Binding_Printing_Cost_Mar__c</fullName>
    <inlineHelpText>Saddle/Perfect Binding Printing Cost Mar</inlineHelpText>
    <label>Saddle/Perfect Binding Printing Cost Mar</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>