force-app/main/default/objects/CustomMarkupConfiguration__c/fields/Wire_Spiral_Binding_Cost_Markup__c.field-meta.xml
<CustomField>
    <fullName>Wire_Spiral_Binding_Cost_Markup__c</fullName>
    <label>Wire/Spiral Binding Cost Markup</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>