force-app/main/default/objects/CustomMarkupConfiguration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cost_Low__c</columns>
    <columns>Cost_Max__c</columns>
    <columns>Saddle_Perfect_Binding_Printing_Cost_Mar__c</columns>
    <columns>Case_Binding_Printing_Cost_Markup__c</columns>
    <columns>Board_Book_Printing_Cost_Markup__c</columns>
    <columns>Wire_Spiral_Binding_Cost_Markup__c</columns>
    <columns>Add_On_Cost_Markup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>